[package]
name = "ceph_monitor"
version = "0.1.0"
authors = ["Chris MacNaughton <chmacnaughton@gmail.com>"]

[dependencies]
rustc-serialize = "*"
time="*"
log = "*"
regex = "*"
simple_logger = "*"
uuid = "*"
influent = "0.2"
output_args = {git = "https://github.com/ChrisMacNaughton/ceph_cli_args.git"}
ceph = {git = "https://github.com/ChrisMacNaughton/ceph-rs.git"}